# internal/controller/auth.go
@@ -8,6 +8,7 @@ import (
 	"net/url"
 
 	"github.com/ogen-go/ogen/middleware"
+	"github.com/tiagoposse/connect/ent"
 	"github.com/tiagoposse/connect/ent/ogent"
 	"github.com/tiagoposse/connect/ent/user"
 	"github.com/tiagoposse/connect/internal/sessions"
@@ -15,6 +16,20 @@ import (
 	log "github.com/sirupsen/logrus"
 	authz "github.com/tiagoposse/go-auth/sessions"
 )
+
+func buildAuthFromUser(e *ent.User) sessions.SessionInfo {
+
+	return sessions.SessionInfo{
+		ID: e.ID,
+		PhotoURL: e.PhotoURL,
+		Provider: e.Provider,
+		Email: e.Email,
+		Firstname: e.Firstname,
+		Lastname: e.Lastname,
+		Group: e.Edges.Group.ID,
+		Scopes: e.Edges.Group.Scopes,
+	}
+}
 
 func (c *Controller) Status(ctx context.Context) (ogent.StatusRes, error) {
 	ctxSess := ctx.Value(authz.ContextSessionKey{})
@@ -52,8 +67,26 @@ func (c *Controller) GoogleAuthSync(ctx context.Context) (ogent.GoogleAuthSyncRe
 }
 
 
-func (c *Controller) UserpassLogin(context.Context, ogent.OptUserpassLoginReq) (ogent.UserpassLoginRes, error) {
-	return nil, nil
+func (c *Controller) UserpassLogin(ctx context.Context, req ogent.OptUserpassLoginReq) (ogent.UserpassLoginRes, error) {
+	e, err := c.client.User.Query().Where(user.EmailEQ(req.Value.Username)).First(ctx)
+	if err != nil {
+		return &ogent.UserpassLoginUnauthorized{}, err
+	}
+	
+	info := buildAuthFromUser(e)
+
+	token, err := c.auth.CreateSessionToken(ctx, info)
+	if err != nil {
+		return &ogent.UserpassLoginBadRequest{}, err
+	}
+	auditCtx := context.WithValue(ctx, authz.ContextSessionKey{}, &authz.Session{
+		SessionInfo: info,
+	})
+
+	c.audit.AuditAction(auditCtx, "userpassLogin")
+	return &ogent.UserpassLoginOK{
+		SetCookie: fmt.Sprintf("Authorization=%s; Same-Site=Lax; HttpOnly; Secure; Path=/", token),
+	}, nil
 }
 
 func (c *Controller) GoogleAuthCallback(ctx context.Context, req ogent.OptGoogleAuthCallbackReq) (ogent.GoogleAuthCallbackRes, error) {
@@ -61,28 +94,25 @@ func (c *Controller) GoogleAuthCallback(ctx context.Context, req ogent.OptGoogle
 	if err != nil {
 		log.Debugf("parsing saml response: %s", err.Error())
 
-		return nil, nil
+		return &ogent.GoogleAuthCallbackBadRequest{}, nil
 	}
 
 	e, err := c.client.User.Query().Where(user.EmailEQ(email)).WithGroup().Only(ctx)
 	if err != nil {
 		return &ogent.GoogleAuthCallbackUnauthorized{}, err
 	}
-	info := sessions.SessionInfo{
-		ID: e.ID,
-		PhotoURL: e.PhotoURL,
-		Provider: e.Provider,
-		Email: e.Email,
-		Firstname: e.Firstname,
-		Lastname: e.Lastname,
-		Group: e.Edges.Group.ID,
-		Scopes: e.Edges.Group.Scopes,
-	}
+	
+	info := buildAuthFromUser(e)
 	
 	token, err := c.auth.CreateSessionToken(ctx, info)
 	if err != nil {
 		return &ogent.GoogleAuthCallbackInternalServerError{}, err
 	}
+
+	auditCtx := context.WithValue(ctx, authz.ContextSessionKey{}, &authz.Session{
+		SessionInfo: info,
+	})
+	c.audit.AuditAction(auditCtx, "ssoLoginGoogle")
 
 	location, _ := url.Parse(req.Value.RelayState)
 	return &ogent.GoogleAuthCallbackMovedPermanently{
@@ -94,6 +124,9 @@ func (c *Controller) GoogleAuthCallback(ctx context.Context, req ogent.OptGoogle
 type AfterUrlContextKey struct {}
 
 func GetAuthAfterUrl(req middleware.Request, next middleware.Next) (middleware.Response, error) {
-	req.Context = context.WithValue(req.Context, AfterUrlContextKey{}, req.Raw.Header.Get("Referer"))
+	if req.OperationID == "googleAuthStart" {
+		req.Context = context.WithValue(req.Context, AfterUrlContextKey{}, req.Raw.Header.Get("Referer"))
+	}
+
 	return next(req)
 }
